// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink /> renders link with different classes dependent on props renders class TextLink-primary 1`] = `
<DocumentFragment>
  <a
    class="TextLink TextLink-primary "
    href="http://conferencebuddy.io/"
  >
    Conference Buddy
  </a>
</DocumentFragment>
`;

exports[`<ExternalLink /> renders link with different classes dependent on props renders class TextLink-secondary 1`] = `
<DocumentFragment>
  <a
    class="TextLink  TextLink-secondary"
    href="http://conferencebuddy.io/"
  >
    Conference Buddy
  </a>
</DocumentFragment>
`;
